Fixed sticky positions accounting for z-index

--- a/src/components/Form/styles.module.css
+++ b/src/components/Form/styles.module.css
@@ -1,7 +1,7 @@
 .formContainer {
   position: sticky;
-  top: 51px;
-  padding: 0 0 10px 0;
+  top: 1px;
+  padding: 50px 0 10px 0;
   background-color: var(--n10);
 }
 
