--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  padding: 10px 0 50px 0;
+  padding: 10px 0 0 0;
   background-color: var(--n10);
   z-index: 999;
 }
